// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductEmbeddedCard/> Should render a product card 1`] = `
<Card
  className="genericCard"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Container
      className="cardContainer"
      tag="div"
    >
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <img
            alt="product"
            className="productImage"
            src="string"
          />
        </Col>
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <strong>
              Tandem washing machine
            </strong>
          </Row>
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div>
              <span
                className="starRatingWrapper"
              >
                <ReactStars
                  a11y={true}
                  activeColor="#FDAB40"
                  char="★"
                  color="#E8EBEF"
                  count={5}
                  edit={false}
                  emptyIcon={
                    <span
                      className="material-icons"
                    >
                      star
                    </span>
                  }
                  filledIcon={
                    <span
                      className="material-icons"
                    >
                      star
                    </span>
                  }
                  half={false}
                  halfIcon={
                    <span
                      className="material-icons"
                    >
                      star_half
                    </span>
                  }
                  isHalf={true}
                  onChange={[Function]}
                  size={15}
                  value={4.3}
                />
              </span>
              <span
                className="totalReviews"
              >
                (
                100
                )
              </span>
            </div>
          </Row>
        </Col>
        <Col
          className="chevronButton"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <i
            className="material-icons"
            onClick={[Function]}
          >
            unfold_more
          </i>
        </Col>
      </Row>
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Collapse
            appear={false}
            enter={true}
            exit={true}
            in={false}
            isOpen={false}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            tag="div"
            timeout={350}
            unmountOnExit={false}
          >
            <table>
              <tbody>
                <tr>
                  <td
                    className="cardDetail"
                  >
                    Description:
                  </td>
                  <th>
                    economic washing machine
                  </th>
                </tr>
                <tr>
                  <td
                    className="cardDetail"
                  >
                    Product page:
                  </td>
                  <th>
                    <a
                      href="www.yotpo.com/product/GGGGG"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      www.yotpo.com/product/GGGGG
                    </a>
                  </th>
                </tr>
                <tr>
                  <td
                    className="cardDetail"
                  >
                    Category:
                  </td>
                  <th>
                    <Badge
                      color="secondary"
                      pill={false}
                      tag="span"
                    >
                      electronics
                    </Badge>
                  </th>
                </tr>
              </tbody>
            </table>
          </Collapse>
        </Col>
      </Row>
    </Container>
  </CardBody>
</Card>
`;

exports[`<ProductEmbeddedCard/> Should render a product card 2`] = `
<Card
  className="genericCard"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Container
      className="cardContainer"
      tag="div"
    >
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <img
            alt="product"
            className="productImage"
            src="test-file-stub"
          />
        </Col>
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <strong>
              Tandem washing machine
            </strong>
          </Row>
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div>
              <span
                className="starRatingWrapper"
              >
                <ReactStars
                  a11y={true}
                  activeColor="#FDAB40"
                  char="★"
                  color="#E8EBEF"
                  count={5}
                  edit={false}
                  emptyIcon={
                    <span
                      className="material-icons"
                    >
                      star
                    </span>
                  }
                  filledIcon={
                    <span
                      className="material-icons"
                    >
                      star
                    </span>
                  }
                  half={false}
                  halfIcon={
                    <span
                      className="material-icons"
                    >
                      star_half
                    </span>
                  }
                  isHalf={true}
                  onChange={[Function]}
                  size={15}
                  value={4.3}
                />
              </span>
              <span
                className="totalReviews"
              >
                (
                100
                )
              </span>
            </div>
          </Row>
        </Col>
        <Col
          className="chevronButton"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <i
            className="material-icons"
            onClick={[Function]}
          >
            unfold_more
          </i>
        </Col>
      </Row>
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Collapse
            appear={false}
            enter={true}
            exit={true}
            in={false}
            isOpen={false}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            tag="div"
            timeout={350}
            unmountOnExit={false}
          >
            <table>
              <tbody>
                <tr>
                  <td
                    className="cardDetail"
                  >
                    Description:
                  </td>
                  <th>
                    economic washing machine
                  </th>
                </tr>
                <tr>
                  <td
                    className="cardDetail"
                  >
                    Product page:
                  </td>
                  <th>
                    <a
                      href="www.yotpo.com/product/GGGGG"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      www.yotpo.com/product/GGGGG
                    </a>
                  </th>
                </tr>
                <tr>
                  <td
                    className="cardDetail"
                  >
                    Category:
                  </td>
                  <th>
                    <Badge
                      color="secondary"
                      pill={false}
                      tag="span"
                    >
                      electronics
                    </Badge>
                  </th>
                </tr>
              </tbody>
            </table>
          </Collapse>
        </Col>
      </Row>
    </Container>
  </CardBody>
</Card>
`;

exports[`<ProductEmbeddedCard/> Should render a product card 3`] = `
<Card
  className="genericCard"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Container
      className="cardContainer"
      tag="div"
    >
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <img
            alt="product"
            className="productImage"
            src="test-file-stub"
          />
        </Col>
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <strong>
              Tandem washing machine
            </strong>
          </Row>
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div>
              <span
                className="starRatingWrapper"
              >
                <ReactStars
                  a11y={true}
                  activeColor="#FDAB40"
                  char="★"
                  color="#E8EBEF"
                  count={5}
                  edit={false}
                  emptyIcon={
                    <span
                      className="material-icons"
                    >
                      star
                    </span>
                  }
                  filledIcon={
                    <span
                      className="material-icons"
                    >
                      star
                    </span>
                  }
                  half={false}
                  halfIcon={
                    <span
                      className="material-icons"
                    >
                      star_half
                    </span>
                  }
                  isHalf={true}
                  onChange={[Function]}
                  size={15}
                  value={4.3}
                />
              </span>
              <span
                className="totalReviews"
              >
                (
                100
                )
              </span>
            </div>
          </Row>
        </Col>
        <Col
          className="chevronButton"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <i
            className="material-icons"
            onClick={[Function]}
          >
            unfold_more
          </i>
        </Col>
      </Row>
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Collapse
            appear={false}
            enter={true}
            exit={true}
            in={false}
            isOpen={false}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            tag="div"
            timeout={350}
            unmountOnExit={false}
          >
            <table>
              <tbody>
                <tr>
                  <td
                    className="cardDetail"
                  >
                    Description:
                  </td>
                  <th>
                    economic washing machine
                  </th>
                </tr>
                <tr>
                  <td
                    className="cardDetail"
                  >
                    Product page:
                  </td>
                  <th>
                    <a
                      href="www.yotpo.com/product/GGGGG"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      www.yotpo.com/product/GGGGG
                    </a>
                  </th>
                </tr>
                <tr>
                  <td
                    className="cardDetail"
                  >
                    Category:
                  </td>
                  <th>
                    <Badge
                      color="secondary"
                      pill={false}
                      tag="span"
                    >
                      electronics
                    </Badge>
                  </th>
                </tr>
              </tbody>
            </table>
          </Collapse>
        </Col>
      </Row>
    </Container>
  </CardBody>
</Card>
`;
